--- a/hnsrmyy/detail/jiuzhen.html
+++ b/hnsrmyy/detail/jiuzhen.html
@@ -37,6 +37,7 @@
                 <li>
                     <a href="#"> 急救常识</a>
                 </li>
+            </ul>
         </div>
         <div class="tools">
             <a href="#">
@@ -58,7 +59,39 @@
         </div>
     </div>
     <div id="sectionRight" >
-
+        <h1>科普文章</h1>
+        <ul class="titleLi">
+            <li>
+                <a href="#">门诊就诊流程</a>
+            </li>
+            <li>
+                <a href="#">医院标题预约挂号</a>
+            </li>
+            <li>
+                <a href="#">健康行卡介绍</a>
+            </li>
+            <li>
+                <a href="#">综合服务</a>
+            </li>
+            <li>
+                <a href="#">省医"健康行"卡流程常见问题解答</a>
+            </li>
+            <li>
+                <a href="#">简易门诊介绍</a>
+            </li>
+            <li>
+                <a href="#">患者投诉指南</a>
+            </li>
+            <li>
+                <a href="#">体检标本采集流程</a>
+            </li>
+            <li>
+                <a href="#">病理检查流程</a>
+            </li>
+            <li>
+                <a href="#">影像中心检查流程</a>
+            </li>
+        </ul>
 
     </div>
 </section>
